Update report service impl